Fix flex layout issues on safari/ios

--- a/src/components/values/Values.scss
+++ b/src/components/values/Values.scss
@@ -19,6 +19,7 @@
 
         @media screen and (max-width: $mobile-width-large) {
             flex-direction: column;
+            min-height: 60vh;
         }
     }
     
